# eval-rag

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
audit_llm/faithfulness/: dataclass.py  get_faithfulness.py  utils_faithfulness.py
audit_llm/faithfulness/prompts_template/: prompt_template_faithfulness.py  prompt_template_speculation.py
audit_llm/llm_as_judge/: chain.py  metrics.py  postprocessing.py  prompt.py
audit_llm/relevancy/: dataclass.py  get_relevancy.py
audit_llm/relevancy/prompts_template/: prompt_template.py
audit_llm/utils/: backoff.py  batch_utils.py  file_handler.py  langfuse_utils.py
notebooks/: 18-analyse-results.ipynb
